--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpword": "^1.3",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
