--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.2",
         "phpoffice/phpword": "^1.3",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
